--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint:watch": "esw --watch",
     "stylelint": "stylelint './src/**/*.css'",
     "precommit": "npm run lint && npm run stylelint",
-    "prepush": "npm run test"
+    "prepush": "npm run test",
+    "scss": "node-sass --watch src/scss -o src/css"
   },
   "repository": {
     "type": "git",
@@ -30,7 +31,7 @@
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.1.2",
     "jest": "^23.6.0",
-    "node-sass": "^4.9.4",
+    "node-sass": "^4.10.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "stylelint": "^9.6.0",
@@ -38,5 +39,6 @@
     "webpack": "^4.22.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.9"
-  }
+  },
+  "dependencies": {}
 }
