--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "* Project description:\r This is \"to-do\" app. The main idea of the project was: 1) to simply add and show tasks in 3 categories: call, car-trip, and case; 2) in addition to task header ability to write and see long task description; 3) easy seeing and switching days. \r This app has next features:\r - showing week number;\r - showing day name for today and tomorrow and number of days to now for else dates;\r - easy switching day by arrow buttons;\r - easy choosing day by calendar;\r - showing task time category: start-from, up-to, all-day;\r - showing task category: call, trip, case;\r - showing passed tasks in grey color and feature in green;\r - ability to write a long description for the task.",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --config ./webpack/webpack.dev.js --open HOST=0.0.0.0",
+    "start": "webpack-dev-server --config ./webpack/webpack.dev.js --open",
     "test": "jest",
     "lint": "eslint ./src",
     "lint:watch": "esw --watch",
     "stylelint": "stylelint './src/**/*.css'",
     "precommit": "",
     "prepush": "npm run test",
-    "scss": "node-sass --watch src/scss -o src/css"
+    "scss": "node-sass --watch src/scss -o src/css",
+    "dev": "webpack --mode development --config ./webpack/webpack.dev.js",
+    "build": "webpack --mode production --config ./webpack/webpack.dev.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +26,9 @@
   },
   "homepage": "https://github.com/front-camp-2018/project-scaffoldings#readme",
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.4",
+    "babel-preset-env": "^1.7.0",
     "css-loader": "^1.0.0",
     "eslint": "^5.6.1",
     "eslint-plugin-jest": "^21.25.1",
@@ -41,8 +46,12 @@
     "webpack-dev-server": "^3.1.9"
   },
   "dependencies": {
+    "bootstrap": "^4.1.3",
+    "glyphicons": "^0.2.0",
+    "jquery": "^3.3.1",
     "moment": "^2.22.2",
-    "moment-transform": "^1.0.1"
+    "moment-transform": "^1.0.1",
+    "popper.js": "^1.14.5"
   },
   "directories": {
     "lib": "lib"
