--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
   },
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "bundler": "^0.8.0",
+    "jekyll": "^3.0.0-beta1",
     "jquery": "^3.3.1",
     "moment": "^2.22.2",
     "moment-transform": "^1.0.1",
