--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "project-scaffoldings",
   "version": "1.0.0",
   "description": "* Project description:\r This is \"to-do\" app. The main idea of the project was: 1) to simply add and show tasks in 3 categories: call, car-trip, and case; 2) in addition to task header ability to write and see long task description; 3) easy seeing and switching days. \r This app has next features:\r - showing week number;\r - showing day name for today and tomorrow and number of days to now for else dates;\r - easy switching day by arrow buttons;\r - easy choosing day by calendar;\r - showing task time category: start-from, up-to, all-day;\r - showing task category: call, trip, case;\r - showing passed tasks in grey color and feature in green;\r - ability to write a long description for the task.",
-  "main": "index.js",
+  "main": "dist/bundle.js",
   "scripts": {
     "start": "webpack-dev-server --config ./webpack/webpack.dev.js --open",
     "test": "jest",
@@ -11,9 +11,9 @@
     "stylelint": "stylelint './src/**/*.css'",
     "precommit": "",
     "prepush": "npm run test",
-    "scss": "node-sass --watch src/scss -o src/css",
+    "scss": "node-sass --watch src/scss -o dist",
     "dev": "webpack --mode development --config ./webpack/webpack.dev.js",
-    "build": "webpack --mode production --config ./webpack/webpack.dev.js"
+    "build": "webpack --mode production --config ./webpack/webpack.prod.js"
   },
   "repository": {
     "type": "git",
@@ -47,8 +47,6 @@
   },
   "dependencies": {
     "bootstrap": "^4.1.3",
-    "bundler": "^0.8.0",
-    "jekyll": "^3.0.0-beta1",
     "jquery": "^3.3.1",
     "moment": "^2.22.2",
     "moment-transform": "^1.0.1",
