--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint ./src",
     "lint:watch": "esw --watch",
     "stylelint": "stylelint './src/**/*.css'",
-    "precommit": "",
+    "precommit": "build",
     "prepush": "npm run test",
     "scss": "node-sass --watch src/scss -o assets",
     "build": "webpack --mode production --config ./webpack/webpack.prod.js"
